# finmarketpy

./: .editorconfig  .gitattributes  .gitignore  .pre-commit-config.yaml  INSTALL.md  LICENCE  MANIFEST.in  Makefile  PLANNED_FEATURES.md  README.md  SECURITY.md  blppython.reg  create_package.bat  install_extra_packages.bat  pyproject.toml  pytest.ini  requirements.txt  ruff.toml  setup.py
.github/: FUNDING.yml  copilot-instructions.md  dependabot.yml  secret_scanning.yml
.github/DISCUSSION_TEMPLATE/: q-and-a.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/actions/: action.yml
.github/agents/: analyser.md  summarise.md
.github/hooks/: hooks.json  session-end.sh  session-start.sh
.github/workflows/: copilot-setup-steps.yml  deptry.yml  pre-commit.yml  release.yml  renovate_rhiza_sync.yml  rhiza_book.yml  rhiza_ci.yml  rhiza_codeql.yml  rhiza_deptry.yml  rhiza_pre-commit.yml  rhiza_release.yml  rhiza_sync.yml  rhiza_validate.yml  rhiza_weekly.yml  test.yml
.rhiza/: .cfg.toml  .env  .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  ROADMAP.md  rhiza.mk  semgrep.yml  template-bundles.yml  template.yml
.rhiza/completions/: README.md  rhiza-completion.bash  rhiza-completion.zsh
.rhiza/docs/: ASSETS.md  CONFIG.md  LFS.md  PRIVATE_PACKAGES.md  RELEASING.md  TOKEN_SETUP.md  WORKFLOWS.md
.rhiza/make.d/: README.md  agentic.mk  book.mk  bootstrap.mk  custom-env.mk  custom-task.mk  docs.mk  gh-aw.mk  github.mk  quality.mk  releasing.mk  test.mk
.rhiza/requirements/: README.md  docs.txt  marimo.txt  tests.txt  tools.txt
.rhiza/tests/: README.md  conftest.py  test_utils.py
.rhiza/utils/: suppression_audit.py
binder/: Dockerfile
chartesians/: graphicsconstants.py
chartesians/graphs/: graphproperties.py  plotfactory.py
chartesians_examples/: bokeh_examples.py  plotfactory_examples.py  plotly_examples.py
conf/stylesheets/: miletus-pythalesians.mplstyle  pythalesians.mplstyle
docs/: ARCHITECTURE.md  CUSTOMIZATION.md  DEMO.md  GLOSSARY.md  QUICK_REFERENCE.md  SECURITY.md  conf.py  index.md  index.rst  mkdocs-base.yml
docs/adr/: 0000-adr-template.md
docs/backtest/: backtestcomparison.rst  backtestengine.rst  backtestrequest.rst  index.rst  tradeanalysis.rst
docs/development/: TESTS.md
docs/economics/: eventstudy.rst  index.rst  marketliquidity.rst  report.rst  seasonality.rst  techindicators.rst
docs/network_analysis/: index.rst  learn_network_structure.rst  plot_network_structure.rst
docs/util/: index.rst  marketconstants.rst
examples/: lighttimeseriesfactory_examples.py  plotfactory_examples.py
finmarketpy/: __init__.py
finmarketpy/backtest/: __init__.py  backtestcomparison.py  backtestengine.py  backtestengine.py.bak  backtestrequest.py  tradeanalysis.py
finmarketpy/curve/: __init__.py  abstractcurve.py  abstractpricer.py  fxforwardscurve.py  fxoptionscurve.py  fxspotcurve.py
finmarketpy/economics/: __init__.py  eventstudy.py  eventstudy.py.bak  marketliquidity.py  quickchart.py  report.py  seasonality.py  techindicator.py  techindicator.py.bak
finmarketpy/examples/: events_examples.py  quandl_examples.py  seasonality_examples.py  tradingmodelfxtrend_example.py
finmarketpy/network_analysis/: __init__.py  learn_network_structure.py  plot_network_structure.py
finmarketpy/tests/: test_techindicator.py
finmarketpy/util/: marketconstants.py  marketutil.py
finmarketpy/volatility/: abstractvolsurface.py  fxvolsurface.py  volstats.py
finmarketpy_examples/: backtest_example.ipynb  backtest_example.py  backtest_example.py.bak  events_examples.py  fx_forwards_indices_examples.py  fx_forwards_pricing_examples.py  fx_options_indices_examples.py  fx_options_pricing_examples.py  fx_spot_indices_examples.py  fx_vol_surface_animation.py  fx_vol_surface_interpolation_examples.py  quandl_examples.py  quickchart_example.py  quickchart_examples.py  returns_examples.py  seasonality_examples.py  technicals_example.py  test.py  tradingmodelfxmeanreversion_example.py  tradingmodelfxtrend_bbg_example.py  tradingmodelfxtrend_example.py  vol_stats_examples.py  vwap_example.py
finmarketpy_examples/Notebooks/: QuandlExample.ipynb
finmarketpy_examples/finmarketpy_notebooks/: arcticdb_example.ipynb  backtest_example.ipynb  market_data_example.ipynb  quandl_example.ipynb  s3_bucket_example.ipynb
finmarketpy_examples/notebooks/: backtest_example.ipynb
pythalesians-examples/: bokeh_examples.py  cashbacktest_examples.py  histecondata_examples.py  lighttimeseriesfactory_examples.py  marketliquidity_examples.py  plotfactory_examples.py  plotly_examples.py  seasonality_examples.py  strategyfxcta_example.py  techindicator_examples.py  twitterpythalesians_examples.py
pythalesians-examples/backtest/: cashbacktest_examples.py  strategyfxcta_example.py
pythalesians-examples/econdata/: histecondata_examples.py
pythalesians_graphics/: graphicsconstants.py
pythalesians_graphics_examples/: bokeh_examples.py  plotfactory_examples.py  plotly_examples.py
pythalesians_notebooks/: download_market_data.ipynb  plot_market_data.ipynb  simple_trend_following_backtest.ipynb
pythalesiansexamples/: __init__.py
tests/: conftest.py  test_backtestcomparison.py  test_backtestengine.py  test_backtestrequest.py  test_curve.py  test_eventstudy.py  test_marketconstants.py  test_marketliquidity.py  test_marketutil.py  test_network_analysis.py  test_quickchart.py  test_report.py  test_seasonality.py  test_techindicator.py  test_tradeanalysis.py
(+204 files in other folders)
