[project]
name = 'finmarketpy'
version = "0.0.0"      # do not change by hand!
description = "finmarketpy is a Python based library for backtesting trading strategies"
# Please add authors and correct the email...
authors = [{name='Saeed Amen', email= 'saeed@cuemacro.com'}]
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "blosc",
    "chartpy",
    "findatapy",
    "matplotlib",
    "numba",
    "numpy<2",
    "pandas>=1.5.3",
    "scikit-learn",
    "seasonal",
]
keywords = [
    "trading", "markets", "currencies", "pandas", "data", "Bloomberg", "tick", "stocks", "equities"
]

[project.urls]
repository = "https://github.com/cuemacro/finmarketpy"

[dependency-groups]
dev = [
    "pytest-cov>=6.0.0",
    "pytest>=8.3.3",
    "pre-commit>=4.0.1",
    "deptry>=0.23.0",
    "marimo>=0.11.16",
]

[tool.ruff]
line-length = 120
target-version = "py39"
exclude = [
    "*__init__.py"
]

[tool.ruff.lint]
select = ["E", "F", "I"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["finmarketpy"]

[tool.hatch.build]
include = [
    "LICENSE",    # Ensure the LICENSE file is included in your package
    "README.md",
    "finmarketpy"
]

[tool.bandit]
exclude_dirs = ["tests"]

[tool.deptry.per_rule_ignores]
#DEP001 = ["pyfolio"]       # very dated dependency!
DEP003 = ["finmarketpy"]
