[project]
name = 'finmarketpy'
version = "0.0.0"      # do not change by hand!
description = "finmarketpy is a Python based library for backtesting trading strategies"
# Please add authors and correct the email...
authors = [{name='Saeed Amen', email= 'saeed@cuemacro.com'}]
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "blosc",
    "chartpy",
    "findatapy",
    "matplotlib",
    "numba",
    "numpy<2",
    "pandas>=1.5.3",
    "scikit-learn",
    "seasonal",
    "xlsxwriter>=3.2.9",
]
keywords = [
    "trading", "markets", "currencies", "pandas", "data", "Bloomberg", "tick", "stocks", "equities"
]

[project.optional-dependencies]
options = [
    "financepy",
]

[project.urls]
repository = "https://github.com/cuemacro/finmarketpy"

[dependency-groups]
dev = [
    "pytest-cov>=6.0.0",
    "pytest>=8.3.3",
    "pre-commit>=4.0.1",
    "deptry>=0.23.0",
    "marimo>=0.11.16",
    "plotly",
]

[tool.ruff]
line-length = 120
target-version = "py39"
exclude = [
    "*__init__.py"
]

[tool.ruff.lint]
select = ["E", "F", "I"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/finmarketpy"]

[tool.hatch.build]
include = [
    "LICENSE",    # Ensure the LICENSE file is included in your package
    "README.md",
    "finmarketpy"
]

[tool.bandit]
exclude_dirs = ["tests"]
skips = ["B105", "B110", "B301", "B403"]

[tool.deptry.package_module_name_map]
"scikit-learn" = "sklearn"
"blosc" = "blosc"
"chartpy" = "chartpy"
"findatapy" = "findatapy"
"matplotlib" = "matplotlib"
"numba" = "numba"
"numpy" = "numpy"
"pandas" = "pandas"
"seasonal" = "seasonal"
"financepy" = "financepy"
"pytest-cov" = "pytest_cov"
"pytest" = "pytest"
"pre-commit" = "pre_commit"
"marimo" = "marimo"
"plotly" = "plotly"

[tool.coverage.run]
omit = [
    # These files require live market data downloads (Bloomberg, etc.) and cannot be unit tested
    "*/curve/fxoptionscurve.py",
    "*/curve/rates/fxforwardspricer.py",
    "*/curve/volatility/fxoptionspricer.py",
    "*/curve/volatility/fxvolsurface.py",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if __name__ == .__main__.:",
]

[tool.deptry.per_rule_ignores]
#DEP001 = ["pyfolio"]       # very dated dependency!
DEP001 = ["finmarketpy"]
DEP002 = ["xlsxwriter"]  # used as pd.ExcelWriter engine string, not imported directly
DEP003 = ["finmarketpy"]
